syntax = "proto3";

package auth;

service AuthService {
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
  rpc GetUsers (GetUsersRequest) returns (GetUsersResponse);
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
}

message ValidateTokenRequest {
  string token = 1; 
}

message ValidateTokenResponse {
  bool valid = 1;
  string userId = 2;
  string email = 3;
  repeated string roles = 4;
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string createdAt = 5;
  string updatedAt = 6;
}

message GetUsersRequest {
  int32 page = 1;
  int32 limit = 2;
}

message GetUsersResponse {
  repeated GetUserResponse users = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

message CreateUserRequest {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string password = 4;
}

message CreateUserResponse {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string createdAt = 5;
  string updatedAt = 6;
}

message UpdateUserRequest {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
}

message UpdateUserResponse {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string updatedAt = 5;
}