syntax = "proto3";

package notification;

service NotificationService {
  rpc SendEmail (SendEmailRequest) returns (SendEmailResponse);
  rpc SendSms (SendSmsRequest) returns (SendSmsResponse);
  rpc GetUserNotifications (GetUserNotificationsRequest) returns (GetUserNotificationsResponse);
}

message SendEmailRequest {
  string email = 1;
  string subject = 2;
  string body = 3;
  string template = 4;
  map<string, string> contextData = 5;
}

message SendEmailResponse {
  string id = 1;
  bool success = 2;
  string message = 3;
}

message SendSmsRequest {
  string phoneNumber = 1;
  string message = 2;
}

message SendSmsResponse {
  string id = 1;
  bool success = 2;
  string message = 3;
}

message NotificationResponse {
  string id = 1;
  string userId = 2;
  string type = 3;
  string status = 4;
  string createdAt = 5;
}

message GetUserNotificationsRequest {
  string userId = 1;
  int32 page = 2;
  int32 limit = 3;
}

message GetUserNotificationsResponse {
  repeated NotificationResponse notifications = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}